# ExamRepository

./: README.md  fastapi_app.db  pyproject.toml
app/: config.py  forms.py  handlers.py  models.py  utils.py
scripts/: create_db.py
