[tool.poetry]
name = "exam-task"
version = "0.1.0"
description = ""
authors = ["Simonenko75 <simonenkonikita00@gmail.com>"]
readme = "README.md"
packages = [{include = "exam_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
